[package]
name = "miracle"
description = "Generic pub/sub resource server, e.g. for hosting Project Lighthouse models"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/miracle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
