[package]
name = "miracle"
description = "Generic pub/sub resource server for hosting Project Lighthouse models"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/miracle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lighthouse-protocol = "3.0.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
