[package]
name = "miracle"
description = "Generic pub/sub resource server for Project Lighthouse models"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/miracle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-tungstenite = { version = "0.29.1", features = ["tokio", "tokio-runtime"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
lighthouse-protocol = "5.1.5"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
